[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Items/Boxes/Box2/Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Items/Boxes/Box2/Hit (28x24).png" type="Texture" id=2]
[ext_resource path="res://Items/ItemBox.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 28, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 28, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "hit",
"speed": 24.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 9.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 0.5 )

[node name="ItemBox" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 9.5 )
shape = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
